// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render page for a single expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render page for multiple expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,351.23
  </h1>
</div>
`;
